--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ iframe {
     position: fixed;
     margin: auto;
     width: 260px;
-      -webkit-transform: translate3d(0%, 0, 0);-
+      -webkit-transform: translate3d(0%, 0, 0);
         -ms-transform: translate3d(0%, 0, 0);
          -o-transform: translate3d(0%, 0, 0);
             transform: translate3d(0%, 0, 0);
