--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@
   color: #61dafb;
 }
 
+.modal.right.fade .modal-dialog {
+  right: 10px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
